@@ -1,5 +1,7 @@
 master:
 
+* Improvement: Added `:use_accelerate_endpoint` option when using S3 to enable
+  [Amazon S3 Transfer Acceleration](http://docs.aws.amazon.com/AmazonS3/latest/dev/transfer-acceleration.html)
 * Improvement: make the fingerprint digest configurable per attachment. The
   default remains MD5 but this will change in a future version because it is
   not considered secure anymore against intentional file corruption. For more
